<?xml version="1.0" encoding="utf-8"?>
<resources>
   
	<string name="menu_options">Options</string>
  
    <string name="app_name">Social Gift</string>        
    <string name="localhost">https://localhost:8443</string>
    
    <string name="register_title">Register information</string>
    <string name="settings_title">Change settings</string>
    <string name="new_gift_title">New Gift</string>     
    <string name="login_title">Access information</string>     
    
    <string name="search">Search by title</string>
    
    <string name="name">Name</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="old_password">Old password</string>
    <string name="refresh_frecuency">Refresh touched counter</string>	
    <string name="minute">Every minute</string>	
    <string name="five_minute">Every five minutes</string>
    <string name="hour">Hourly</string>
    <string name="view_inappropiated_gift">View inappropiated gift?</string>
    <string name="order_gift_by">Order gifts by</string>	
    <string name="order_by_date">Date</string>	
    <string name="order_by_likes">Touches</string>					
    <string name="title">Title</string>
    <string name="description">Description</string>
	
	<string name="button_login">Login</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_save">Save</string>
	<string name="button_new_account">New Account in Potlach</string>
	<string name="button_add_gift">Add Gift</string>  
	
	<string name="description_image">Image gift</string>
	
	<string name="menu_settings">Settings</string>
	<string name="menu_settings_new_gift">New Gift</string>
	<string name="menu_settings_account">Settings</string>
	<string name="menu_settings_gift_givers">Gift Givers</string>
	<string name="menu_settings_user_givers">User Givers</string>
	
	<string name="menu_load">Load</string>
	
	<string name="new_gift_image_desc">Select image</string>
	
	<string name="alert_text">Alert</string>
</resources>
