<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"	
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical"
	    android:gravity="center">
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/new_gift_title"
	        android:textSize="20sp" />
	
	    <EditText
	        android:id="@+id/newGiftTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:ems="10"
	        android:hint="@string/title"
	        android:textSize="16sp" >
	        
	    </EditText>
	
	    <EditText
	        android:id="@+id/newGiftDescription"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:ems="10"
	        android:hint="@string/description"
	        android:inputType="textMultiLine"
	        android:lines="3"
	        android:textSize="16sp" />
		    
	    <ImageButton
	        android:id="@+id/newGiftImage"
	        android:layout_width="220dp"
	        android:layout_height="220dp"
	        android:layout_marginBottom="20dp"
	        android:layout_marginTop="10dp"
	        android:scaleType="centerCrop"
	        android:adjustViewBounds="true"
	        android:src="@android:drawable/ic_menu_camera" 
	        android:contentDescription="@string/new_gift_image_desc"/>

	    <Button
	        android:id="@+id/saveGiftButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_save"/>
	    
	</LinearLayout>
</ScrollView>